Working on new Create Order setup: phase 4. Also added _id field to all the front end schemas.

--- a/src/app/order/components/add-items.component.html
+++ b/src/app/order/components/add-items.component.html
@@ -4,7 +4,6 @@
     <div layout="row" layout-wrap class="row-title">
       <div flex="60">
         Product
-        <input type="search" name="search" placeholder="Search" [(ngModel)]="search" class="search" md-maxlength="10" flex="40">
       </div>
       <div class="content-center1" flex="20">
         Quantity
@@ -13,7 +12,16 @@
         Availability
       </div>
     </div>
-    <div>
+    <input type="search"
+           name="search"
+           placeholder="Search"
+           [(ngModel)]="search"
+           class="search"
+           (blur)="showProducts = false"
+           (click)="showProducts = true"
+           md-maxlength="10"
+           flex="40">
+    <div *ngIf="showProducts">
       <div layout-wrap *ngFor="#item of (items| productsFilter:'filterBy': search )" layout="row" class="md-caption md-list-item-text order-row-list" flex >
         <div flex="60">
           <h4 layout-margin>{{item.name}}</h4>
