--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -126,6 +126,7 @@
         <select (change)="getCustomerDetails($event.target.value)">
           <option selected="selected">Select Customer</option>
           <option *ngFor="#customer of allCustomers" [value]="customer._id">{{customer.fromCompany}}</option>
+          <option>Add a New Customer</option>
         </select>
       </div>
     </div>
@@ -166,9 +167,8 @@
         </div>
         <select (change)="onChange($event.target.value)">
           <option selected="selected">Select User</option>
-          <option *ngFor="#user of allUsers" [value]="user.firstName">{{user.firstName}}</option>
+          <option *ngFor="#user of allUsers" [value]="user._id">{{user.firstName}}</option>
         </select>
-
       </div>
     </div>
   </div>
