--- a/src/app/inbox/inbox-itemlist.component.html
+++ b/src/app/inbox/inbox-itemlist.component.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-md="column" layout-fill layout-align="top center" >
-  <md-content flex class="inbox-section"flex-xs="100" flex-sm="100" flex-md="50" flex-gt-lg="50">
+  <div class="inbox-section" flex-xs="40" flex-sm="40" flex-md="40" flex-gt-lg="40">
     <div class="left-section">
       <div class="assign-order" layout="row" >
         <span> Sort By: </span>
@@ -28,8 +28,8 @@
         </div>
       </md-list>
     </div>
-  </md-content>
-  <div layout="column" layout-fill layout-align="top center" hide-xs hide-sm hide-md hide-lg flex-gt-lg="50">
+  </div>
+  <div layout="column" layout-fill layout-align="top center" flex-gt-lg="60">
     <div class="left-section">
       <router-outlet></router-outlet>
     </div>
