--- a/src/app/order/components/common.scss
+++ b/src/app/order/components/common.scss
@@ -337,22 +337,7 @@ input[type=number] {
     font-size: 16px;
   }
 }
-@media all and (max-width:1380px) and (min-width: 320px) {
-  .assigned-section {
-    height: 58px;
-    border-bottom: 2px solid #F3F3F3;
-  }
-  .status-update {
-    label {
-      width: 100%;
-    }
-  }
-  .assigned-select {
-    label {
-      width: 100%;
-    }
-  }
-}
+
 .show-details {
   background: #78B1BA;
   padding: 5px 10px;
@@ -365,8 +350,8 @@ input[type=number] {
 }
 .client-section {
   img {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     border: 1px solid #DEDEDE;
   }
@@ -451,7 +436,6 @@ ul.checkout-bar {
       color: #fff;
       border-radius: 16px;
       outline: none;
-      margin-left: 24px;
     }
      &.active {
       color: #FBB03B;
@@ -469,7 +453,6 @@ ul.checkout-bar {
         color: #fff;
         border-radius: 16px;
         outline: none;
-        margin-left: 24px;
       }
     }
     &.visited {
@@ -492,55 +475,52 @@ ul.checkout-bar {
         color: #fff;
         border-radius: 16px;
         outline: none;
-        margin-left: 24px;
       }
     }
     &:nth-child(1) {
       &:before {
         content: "";
         background-image: url("../app/share/images/order-recieved.svg");
-        background-size: 26px 26px;
+        background-size: 25px 25px;
         background-repeat: no-repeat;
-        background-position: 7px 6px;
+        background-position: 5px 4px;
       }
     }
      &:nth-child(2) {
       &:before {
         content: "";
         background-image: url("../app/share/images/order-placed.svg");
-        background-size: 24px 24px;
+        background-size: 23px 23px;
         background-repeat: no-repeat;
-        background-position: 11px 9px;
+        background-position: 8px 7px;
       }
     }
     &:nth-child(3) {
       &:before {
         content: "";
         background-image: url("../app/share/images/in-transit.svg");
-        background-size: 26px 26px;
+        background-size: 24px 24px;
         background-repeat: no-repeat;
-        background-position: 7px 8px;
+        background-position: 5px 7px;
       }
     }
      &:nth-child(4) {
       &:before {
         content: "";
         background-image: url("../app/share/images/delivered.svg");
-        background-size: 26px 26px;
+        background-size: 24px 24px;
         background-repeat: no-repeat;
-        background-position: 7px 8px;
+        background-position: 5px 7px;
       }
     }
   }
   span {
     color: #57aed1;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 200;
     text-decoration: none;
-    padding-left: 13px;
-    margin-top: -18px;
-    margin-bottom: 6px;
-    float: left;
+    margin-bottom: 4px;
+    display: inline-block;
     text-align: center;
     width: 100%;
   }
@@ -566,7 +546,7 @@ select {
   background-position: 83px 9px;
 }
 
-@media all and (min-width: 800px) {
+
  .checkout-bar li.active:after {
     -webkit-animation: myanimation 3s 0;
     @include green-stripe;
@@ -576,7 +556,7 @@ select {
     width: 100%;
     left: 50%;
     position: absolute;
-    top: -42px;
+    top: -21px;
     z-index: 0;
   }
   .checkout-wrap {
@@ -603,17 +583,17 @@ select {
   }*/
    li {
       display: inline-block;
-      margin: 50px 0 0;
+      margin: 15px 0 0;
       padding: 0;
       text-align: center;
       width: 20%;
       &:before {
-        height: 40px;
-        left: 40%;
-        line-height: 45px;
+        height: 35px;
+        left: 38%;
+        line-height: 35px;
         position: absolute;
-        top: -65px;
-        width: 40px;
+        top: -40px;
+        width: 35px;
         z-index: 99;
       }
       &.visited {
@@ -625,26 +605,39 @@ select {
           height: 4px;
           left: 50%;
           position: absolute;
-          top: -42px;
+          top: -21px;
           width: 100%;
           z-index: 99;
         }
       }
     }
   }
-}
+
 .customer-details {
   display: inline-block;
   width: 100%;
+  height: 100px;
   .select-customer,
   .assigned-customer {
     float: left;
     width:15%;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 9px;
   }
   .checkout-section {
     float: left;
     width:70%;
   }
 }
+@media screen and (max-width: 1200px) {
+  ul.checkout-bar::before {
+      left: 38% !important;
+  }
+  ul.checkout-bar li{
+    margin: 15px 0 0 6px ;
+    &:before {
+      left: 38% !important;
+    }
+  }
+}
+
