--- a/src/app/order/components/add-other-details.component.html
+++ b/src/app/order/components/add-other-details.component.html
@@ -1,367 +1,21 @@
 <div class="orders">
-
-
-
-  <div class="order-details" *ngIf="!oldCustomers">
-    <div class="tableClass customer-details" layout-padding >
-      <h3>Details:</h3>
-      <div layout-gt-sm="row">
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Compnay Name</label>
-            <input md-input [(ngModel)] = "newCustomer.fromCompany">
-          </md-input-container>
-        </div>
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Contact Person</label>
-            <input md-input [(ngModel)] = "newCustomer.contactPerson" >
-          </md-input-container>
-        </div>
-      </div>
-
-      <div layout-gt-sm="row" >
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Contact Number</label>
-            <input md-input [(ngModel)] = "newCustomer.contactNumber" >
-          </md-input-container>
-        </div>
-      </div>
-
-      <div class="tableClass" layout-padding>
-        <h4>Shipping Address</h4>
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Line1</label>
-              <input md-input [(ngModel)] = "newCustomer.shippingAddress.line1" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Line2</label>
-              <input md-input [(ngModel)] = "newCustomer.shippingAddress.line2" >
-            </md-input-container>
-          </div>
-        </div>
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Pincode</label>
-              <input md-input [(ngModel)] = "newCustomer.shippingAddress.pinCode" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>City</label>
-              <input md-input [(ngModel)] = "newCustomer.shippingAddress.city" >
-            </md-input-container>
-          </div>
-        </div>
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>State</label>
-              <input md-input [(ngModel)] = "newCustomer.shippingAddress.state" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Country</label>
-              <input md-input [(ngModel)] = "newCustomer.shippingAddress.country" >
-            </md-input-container>
-          </div>
-        </div>
-
-        <h4>Billing Address
-          <label>
-            <input type="checkbox" (click)="copyAddress()"/>
-            Same as Shipping Address
-          </label>
-        </h4>
-
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label >Line1</label>
-              <input md-input [(ngModel)] = "newCustomer.billingAddress.line1" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Line2</label>
-              <input md-input [(ngModel)] = "newCustomer.billingAddress.line2" >
-            </md-input-container>
-          </div>
-        </div>
-
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Pincode</label>
-              <input md-input [(ngModel)] = "newCustomer.billingAddress.pinCode" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>City</label>
-              <input md-input [(ngModel)] = "newCustomer.billingAddress.city" >
-            </md-input-container>
-          </div>
-        </div>
-
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>State</label>
-              <input md-input [(ngModel)] = "newCustomer.billingAddress.state" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Country</label>
-              <input md-input [(ngModel)] = "newCustomer.billingAddress.country" >
-            </md-input-container>
-          </div>
-        </div>
-      </div>
-      <h3>Contract Details: </h3>
-      <div *ngFor="#contract of (selectedCustomer.contract)">
-
-        <label>item:</label>
-        <select (change)="onSelect($event.target.value)">
-          <option selected="selected">Select Item</option>
-          <option *ngFor="#item of items"
-                  value= {{item._id}}>{{item.name}}
-          </option>
-        </select>
-
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>item</label>
-            <input md-input [(ngModel)] = "contract.item" >
-          </md-input-container>
-        </div>
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>product</label>
-            <input md-input [(ngModel)] = "contract.productId" >
-          </md-input-container>
-        </div>
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>unit price</label>
-            <input md-input [(ngModel)] = "contract.unitRate" >
-          </md-input-container>
-        </div>
-      </div>
-      <button md-raised-button class="button md-raised md-primary" (click)="newContract()">New Contract</button>
-      <div layout-padding *ngIf="displayCustomer">{{ customerMessage }}</div>
-      <button md-raised-button class="button md-raised md-primary" (click)="createCustomer()">Create Customer</button>
-      <button md-raised-button class="button md-raised" (click)="oldCustomers = true">Go Back To Old Customers</button>
-
-      <h4>More Details</h4>
-      <div layout-gt-sm="row">
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Remarks</label>
-            <input md-input [(ngModel)] = "currentOrder.remarks" >
-          </md-input-container>
-        </div>
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Order Type</label>
-            <input md-input [(ngModel)] = "currentOrder.orderType" >
-          </md-input-container>
-        </div>
-      </div>
-
-
+    <div style="float: left; width: 50%" [hidden]="isCustomerSelected">
+       <h3> Shipping Address</h3>
+          <p>{{currentCustomer.fromCompany}}</p>
+          <p>{{currentCustomer.shippingAddress.line1}},</p>
+          <p>{{currentCustomer.shippingAddress.line2}},</p>
+          <p>{{currentCustomer.shippingAddress.pinCode}}, </p>
+          <p>{{currentCustomer.shippingAddress.city}}, </p>
+          <p>{{currentCustomer.shippingAddress.country}}, </p>
     </div>
-  </div>
-
-  <div class="order-details" *ngIf="oldCustomers">
-    <h3>Get Customer Details: </h3>
-
-    <div flex class="assigned-select" flex="40">
-      <md-input-container class="md-block" flex-gt-sm flex>
-        <select (change)="getCustomerDetails($event.target.value)">
-          <option selected="selected">Choose Customer</option>
-          <option *ngFor="#customer of allCustomers" [value]="customer._id">{{customer.fromCompany}}</option>
-        </select>
-      </md-input-container>
+    <div style="float: left; width: 50%" [hidden]="isCustomerSelected">
+       <h3> Billing Address</h3>
+          <p>{{currentCustomer.fromCompany}},
+          <p>{{currentCustomer.billingAddress.line1}},</p>
+          <p>{{currentCustomer.billingAddress.line2}},</p>
+          <p>{{currentCustomer.billingAddress.pinCode}}, </p>
+          <p>{{currentCustomer.billingAddress.city}}, </p>
+          <p>{{currentCustomer.billingAddress.country}}, </p>
     </div>
 
-    <div>
-      <h2>OR</h2>
-      <button md-raised-button class="button md-raised md-primary" (click)="oldCustomers = false">Create New Customer</button>
-    </div>
-
-    <div class="tableClass customer-details" layout-padding *ngIf="showDetails">
-      <h3>Customer Details:</h3>
-      <div layout-gt-sm="row">
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Compnay Name</label>
-            <input md-input [(ngModel)] = "selectedCustomer.fromCompany" >
-          </md-input-container>
-        </div>
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Contact Person</label>
-            <input md-input [(ngModel)] = "selectedCustomer.contactPerson" >
-          </md-input-container>
-        </div>
-      </div>
-
-      <div layout-gt-sm="row" >
-        <div layout-gt-sm="row" flex="50">
-          <md-input-container class="md-block" flex-gt-sm>
-            <label>Contact Number</label>
-            <input md-input [(ngModel)] = "selectedCustomer.contactNumber" >
-          </md-input-container>
-        </div>
-      </div>
-
-      <div class="tableClass" layout-padding>
-        <h4>Shipping Address</h4>
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Line1</label>
-              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress.line1" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Line2</label>
-              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress.line2" >
-            </md-input-container>
-          </div>
-        </div>
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Pincode</label>
-              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress.pinCode" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>City</label>
-              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress.city" >
-            </md-input-container>
-          </div>
-        </div>
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>State</label>
-              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress.state" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Country</label>
-              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress.country" >
-            </md-input-container>
-          </div>
-        </div>
-
-        <h4>Billing Address</h4>
-
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label >Line1</label>
-              <input md-input [(ngModel)] = "selectedCustomer.billingAddress.line1" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Line2</label>
-              <input md-input [(ngModel)] = "selectedCustomer.billingAddress.line2" >
-            </md-input-container>
-          </div>
-        </div>
-
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Pincode</label>
-              <input md-input [(ngModel)] = "selectedCustomer.billingAddress.pinCode" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>City</label>
-              <input md-input [(ngModel)] = "selectedCustomer.billingAddress.city" >
-            </md-input-container>
-          </div>
-        </div>
-
-        <div layout-gt-sm="row" >
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>State</label>
-              <input md-input [(ngModel)] = "selectedCustomer.billingAddress.state" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Country</label>
-              <input md-input [(ngModel)] = "selectedCustomer.billingAddress.country" >
-            </md-input-container>
-          </div>
-        </div>
-
-
-        <h3>Contract Details: </h3>
-        <div *ngFor="#contract of (selectedCustomer.contract)">
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>item</label>
-              <input md-input [(ngModel)] = "contract.item" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>product</label>
-              <input md-input [(ngModel)] = "contract.productId" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>unit price</label>
-              <input md-input [(ngModel)] = "contract.unitRate" >
-            </md-input-container>
-          </div>
-        </div>
-        <button md-raised-button class="button md-raised md-primary" (click)="newContract()">New Contract</button>
-        <div layout-gt-sm="row">
-          <h5>Please fill up a few more details in order to complete your order: </h5>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Remarks</label>
-              <input md-input [(ngModel)] = "currentOrder.remarks" >
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row" flex="50">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Order Type</label>
-              <input md-input [(ngModel)] = "currentOrder.orderType" >
-            </md-input-container>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-
-  <div layout-padding *ngIf="displayError == true">{{ errorMessage }}</div>
-  <button md-raised-button class="button md-raised md-primary" (click)="proceedNext()">Proceed Next</button>
-  <button md-raised-button class="cancel button md-raised" (click)="cancelOrder()" >Cancel</button>
-  <button md-raised-button class="button md-raised" (click)="goToPrevious()">Previous</button>
 </div>
