--- a/src/app/share/components/header.component.scss
+++ b/src/app/share/components/header.component.scss
@@ -81,3 +81,14 @@ md-icon {
     }
   }
 }
+ib-header .toster-error {
+  position: absolute;
+  right: 10px;
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  font-size: 15px;
+  padding: 8px;
+  min-width: 100px;
+  text-align: center;
+}
