--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -1,119 +1,4 @@
-<!--
-<div layout="row" layout-xs="column" class="right-top-section">
-  <div flex>
-    <md-list layout="column">
-      <md-list-item class="md-3-line col-order-detail">
-        <img src="app/share/images/avtars/{{currentOrder.defaultTask.assignedTo.firstName}}.jpg" class="md-avatar" >
-        <div class="md-list-item-text">
-          <h2>Order Details</h2>
-        </div>
-      </md-list-item>
-    </md-list>
-  </div>
-  <div flex>
-    <md-list layout="column" layout-align="end end">
-      <md-list-item class="md-3-line col-order-detail">
-        <div class="md-list-item-text">
-          <h3>Order Date : <my-date-picker [options]="myDatePickerOptions"
-                                           (dateChanged)="onDate1Changed($event)"
-                                           [selDate]="selectedDate1"></my-date-picker></h3>
-          <h3>Delivery Date : <my-date-picker [options]="myDatePickerOptions"
-                                              (dateChanged)="onDate2Changed($event)"
-                                              [selDate]="selectedDate2"></my-date-picker></h3>
-        </div>
-      </md-list-item>
-    </md-list>
-  </div>
-</div>
-
-<div layout="row" layout-xs="column" class="assigned-section">
-  <div flex class="assigned-select" flex="40">
-    <label flex="100" layout="column">Assigned to :</label>
-    <md-input-container class="md-block" flex-gt-sm flex>
-      <select  [(ngModel)]="currentOrder.defaultTask.assignedTo.firstName" (ngModelChange)="onChange($event)">
-        <option *ngFor="#user of allUsers" [value]="user.firstName">{{user.firstName}}</option>
-      </select>
-    </md-input-container>
-    <img src="app/order/images/chat-box.svg" class="chat-icon" >
-  </div>
-
-  <div flex class="status-update">
-    <label flex="100" layout="column">Status :</label>
-    <div class="radio-btn">
-      <label class="control control--checkbox">
-        <input value="Running Late" type="checkbox"
-               (click)="currentOrder.defaultTask.status = 'Running Late'"
-               [checked]="currentOrder.defaultTask.status == 'Running Late'">
-        <div class="control__indicator"></div>
-      </label>
-    </div>
-
-    <div class="radio-btn1">
-      <label class="control control--checkbox">
-        <input value="Running Late" type="checkbox"
-               (click)="currentOrder.defaultTask.status = 'In Progress'"
-               [checked]="currentOrder.defaultTask.status == 'In Progress'">
-        <div class="control__indicator"></div>
-      </label>
-    </div>
-
-    <div class="radio-btn2">
-      <label class="control control--checkbox">
-        <input value="Running Late" type="checkbox"
-               (click)="currentOrder.defaultTask.status = 'Completed'"
-               [checked]="currentOrder.defaultTask.status == 'Completed'">
-        <div class="control__indicator"></div>
-      </label>
-    </div>
-  </div>
-
-</div>
- -->
-
- <div class="orders">
-
-<!--   <div layout="row" layout-xs="column" class="right-top-section">
-    <div flex>
-      <md-list layout="column">
-        <md-list-item class="md-3-line col-order-detail">
-          <img src="app/share/images/avtars/{{currentOrder.defaultTask.assignedTo.firstName}}.jpg" class="md-avatar" >
-          <div class="md-list-item-text">
-            <h2>Create Order</h2>
-            <h2 *ngIf="orderStage === 'preview'">Preview Items</h2>
-            <h2 *ngIf="orderStage === 'basicDetails'">Enter Other Details</h2>
-            <h2 *ngIf="orderStage === 'fullPreview'">Order Details</h2>
-          </div>
-        </md-list-item>
-      </md-list>
-    </div>
-    <div flex>
-      <md-list layout="column" layout-align="end end">
-        <md-list-item class="md-3-line col-order-detail">
-          <div class="md-list-item-text">
-            <h3><span>Order Date :</span> <my-date-picker [options]="myDatePickerOptions"
-                                             (dateChanged)="onDate1Changed($event)"
-                                             [selDate]="selectedDate1"></my-date-picker></h3>
-            <h3><span>Delivery Date :</span> <my-date-picker [options]="myDatePickerOptions"
-                                             (dateChanged)="onDate2Changed($event)"
-                                             [selDate]="selectedDate2"></my-date-picker></h3>
-          </div>
-        </md-list-item>
-      </md-list>
-    </div>
-  </div> -->
-
-<!--   <div layout="row" layout-xs="column" class="assigned-section">
-    <div flex class="assigned-select" flex="40">
-      <label flex="100" layout="column">Assigned to :</label>
-      <md-input-container class="md-block" flex-gt-sm flex>
-        <select  [(ngModel)]="currentOrder.defaultTask.assignedTo.firstName" (ngModelChange)="onChange($event)">
-        <option *ngFor="#user of allUsers" [value]="user.firstName">{{user.firstName}}</option>
-        </select>
-      </md-input-container>
-      <img src="app/order/images/chat-box.svg" class="chat-icon" >
-    </div>
-  </div> -->
-
+<div class="orders">
   <div class="show-details">
     <span>Show Details</span>
   </div>
@@ -165,7 +50,7 @@
         <div flex class="client-section">
           <img class="client-img" src="app/share/images/company-logo/infosys.png">
         </div>
-        <select (change)="onChange($event.target.value)">
+        <select [(ngModel)]="selectedUser"  (ngModelChange)="getUserDetails($event)">
           <option selected="selected">Select User</option>
           <option *ngFor="#user of allUsers" [value]="user._id">{{user.firstName}}</option>
         </select>
