changes for product master

--- a/src/app/share/components/header.component.html
+++ b/src/app/share/components/header.component.html
@@ -17,7 +17,7 @@
     <md-icon><img src="app/share/images/orders.svg"></md-icon> Master
     <div class="menu-dropdown">
       <ul>
-        <li> Products </li>
+        <li [routerLink]="['/Inbox/Products']"> Products </li>
         <li> Customers </li>
       </ul>
     </div>
