--- a/src/app/share/components/header.component.scss
+++ b/src/app/share/components/header.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../node_modules/ng2-material/ng2-material.css";
+
 $ca-search-bg: rgba(255, 255, 255, 0.4);
 $dropdown-bg: #831D27;
 $dropdown-list-bg: #A54E56;
