--- a/src/app/inbox/item-views/list-view.scss
+++ b/src/app/inbox/item-views/list-view.scss
@@ -1,3 +1,5 @@
+
+
 $ca-light-gray: #EAEAEA;
 $ca-gray: #cccccc;
 $ca-dark-gray: #b7b7b7;
@@ -47,12 +49,13 @@ $ca-text-editor-bg: #b2b2b2;
   float: left;
 }
 .list-containt {
-  width: 70%;
+  width: 64%;
   display: inline-block;
   height: auto;
   p {
     margin: 4px 0px;
     font-size: 14px;
+    word-wrap: break-word;
   }
 }
 .user-right-section {
@@ -202,10 +205,12 @@ md-list-item {
 }
 
 /* Plese move to header component css */
-md-toolbar.toolbar {
+ib-header {
   background: transparent url("../app/inbox/images/header-bg.png") repeat-x scroll 0 0 / 100% 100%;
   min-height: 34px;
   height: 34px;
+  display: inline-block;
+  width: 100%;
 }
 
 md-sidenav-container.md-pushed{
@@ -218,7 +223,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1280px) {
   .client-img {
     margin: 5px 10px 0px 10px;
   }
