Removed all unwanted code for Order component

--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -1,5 +1,5 @@
 <div class="orders">
   <order-header></order-header>
-  <add-items [currentOrder]="currentOrder"></add-items>
-  <add-other-details [currentOrder]="currentOrder"></add-other-details>
+  <!--<add-items [currentOrder]="currentOrder"></add-items>-->
+  <!--<add-other-details [currentOrder]="currentOrder"></add-other-details>-->
 </div>
