--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -1,5 +1,5 @@
 <div class="orders">
-  <order-header></order-header>
-  <add-items [currentOrder]="currentOrder"></add-items>
-  <add-other-details [currentOrder]="currentOrder"></add-other-details>
+  <oa-order-header></oa-order-header>
+  <oa-order-items [currentOrder]="currentOrder"></oa-order-items>
+  <oa-order-other-details [currentOrder]="currentOrder"></oa-order-other-details>
 </div>
